# matchbox

./: .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.githooks/: people-guard.sh  pii-scan.sh  pre-push-guard.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
archive/jinja/: templates_env.py
archive/jinja/routes/: inbox.py  library.py
archive/v0.1/: MASTER.md  README.md
archive/v0.1/docs/: README.md  blind-spots.md  commands-reference.md  setup.md
archive/v0.1/shared/: db.py
archive/v0.1/ui/: ui.py
archive/v0.1/workflows/: apply.md  daily-scan-jobs.md  factual-audit.md  interview-prep.md  profile-dispatcher.md  scheduling.md  tailor.md  weekly-scan-programs.md
archive/v0.2/: rubric.yaml
archive/v0.2/docs/: architecture.md  cli-reference.md  development.md  setup.md  ux-design.md
archive/v0.2/matchbox/: cli.py  ingest.py
archive/v0.2/people-demo/: README.md  log.md  profile.yaml  stories.md  voice.yaml
archive/v0.2/plans/: 2026-05-14-v1-ship-plan.md  matchbox-v0.2-rebuild-plan-2026-04-21.md  refactor-plan-2026-04-21-INCREMENTAL-SUPERSEDED.md
archive/v0.2/tests/: test_person.py  test_scoring.py
designs/v1/: Engineering Handoff.html  Insights.jsx  Matchbox.html  Today.jsx  colors_and_type.css  mb.css  parts.jsx
designs/v1.1/: Browse.jsx  Detail.jsx  Discovery.html  DiscoveryApp.jsx  Tracker.jsx  store.jsx
designs/v1.2/: App.html  App.jsx  Apply.jsx  Engineering Handoff - Full App.html  Engineering Handoff.html  Intake.jsx  Library.jsx  MatchboxApp.jsx  Offers.jsx  Palette.jsx  People.jsx  Review.jsx  Settings.jsx  Sources.jsx  Studio.html  StudioApp.jsx  StudioInsights.jsx  Tailoring.jsx  WatchlistJD.jsx  Workspace.jsx  ai.js  aiui.jsx  apply-data.js  apply.css  core.jsx  data.js  discovery-data.js  discovery.css  dui.jsx  mb.css  studio-data.js  studio.css  sui.jsx  ui.jsx
docs/: applications-tracker-brief.md  architecture.md  cost-optimization.md  discovery-design-brief.md  discovery-integration-spec.md  index.md  operator-runbook.md  product-thesis.md  setup.md  sota-build-plan.md  supported-ats.md  testing-guide.md  troubleshooting.md  ux-design.md  v0.3-design.md  v0.4-design.md  v1-engineering-spec.md
docs/audits/: 2026-05-14-sota-audit-and-roadmap.md
docs/decisions/: 0001-cli-and-web-as-equal-partners.md  0002-htmx-over-react.md  0003-sqlite-per-profile.md  0004-llm-only-for-judgment.md  0005-no-auth-localhost-only.md  0006-scoring-weight-rename.md  0007-no-strictness-hooks-yet.md  README.md
docs/examples/: livefire-ingest.json  livefire-job1-polish.json  livefire-job1-requirements.json  livefire-sample-cv.md  livefire-walkthrough.md
docs/history/: README.md
docs/plan/: 2026-05-22-v0.3-execution-plan.md  2026-06-05-v1.2-build-plan.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Shell.tsx  main.tsx  types.ts
frontend/src/api/: ai.ts  answers.ts  brain.ts  client.ts  doctor.ts  insights.ts  interviews.ts  jobs.ts  library.ts  offers.ts  onboarding.ts  packet.ts  profile.ts  review.ts  setup.ts  sources.ts  targets.ts
frontend/src/data/: sample.ts  stages.ts
frontend/src/discovery/: dui.tsx  types.ts
frontend/src/lib/: derive.ts  useDialog.ts
frontend/src/screens/: Answers.tsx  Apply.tsx  Detail.tsx  Insights.tsx  Intake.tsx  Library.tsx  Offers.tsx  Profile.tsx  ReviewFacts.tsx  Settings.tsx  Sources.tsx  Today.tsx  Tracker.tsx  Workspace.tsx
frontend/src/store/: useApps.ts  useAppsMemory.ts
frontend/src/styles/: app.css  colors_and_type.css  discovery.css  mb.css
frontend/src/ui/: Palette.tsx  SetupRail.tsx  atoms.tsx  icon.tsx  parts.tsx
people/: README.md
people/demo/: README.md  anchor-packs.yaml  profile.yaml
plans/: marathon-plan-2026-04-21.md
plans/v0.2-drafts/: cover-canonical-draft.md
schemas/: ingest.v1.json  job-facts.v1.json  job-requirements.v1.json  polish.v1.json  selection.v1.json  status.v1.json  work-queue.v1.json
scripts/: funded_companies.py  setup.sh  verify_open.py
shared/: cv-rubric.md  keyword-aliases.json  rubric.json  states.yml  voice-guide.md  voice-rules.json  voice-rules.yaml
shared/templates/: cover-canonical.typ  cv-canonical.typ
src/matchbox/: __init__.py  assemble.py  cli.py  contracts.py  doctor.py  jobfacts.py  jobreqs.py  pdf_backend.py  polish.py  render_html.py
src/matchbox/agent_tasks/: __init__.py  __main__.py  repo.py
src/matchbox/answers/: __init__.py  repo.py
src/matchbox/artifacts/: __init__.py  __main__.py  repo.py
src/matchbox/assemble_parts/: __init__.py  cvdoc.py  diagnostics.py  loaders.py  render.py  reporting.py  selection.py
src/matchbox/brain/: __init__.py  llm.py  prompts.py  runner.py
src/matchbox/core/: 002_graph.sql  003_job_geo.sql  004_application_tracking.sql  005_pipeline.sql  006_discovery.sql  007_sota.sql  008_answers.sql  009_interviews.sql  db.py  (+13 more)
tests/: conftest.py  test_agent_tasks.py  test_aggregator_scan.py  test_aggregators.py  test_ai_web.py  test_answers.py  test_artifacts.py  test_assemble_smoke.py  test_brain_runner.py  test_brain_web.py  test_changes_md.py  test_contracts.py  test_cover_and_restyle.py  test_cvdoc.py  test_data_layer.py  test_discovery.py  test_discovery_api.py  test_doctor.py  test_drift_detection.py  test_eligibility.py  test_enrich.py  test_eval.py  test_fastembed_integration.py  test_gaps_web.py  test_graph_backfill.py  test_inbox_web.py  test_ingest_cli.py  test_insights.py  test_interviews.py  test_jd_text.py  test_jobfacts.py  test_jobreqs.py  test_keyword_aliases.py  test_library_crud_web.py  test_library_web.py  test_matching.py  test_metric_emphasis.py  test_migrations.py  test_momentum.py  test_offers.py  (+21 more)
tests/fixtures/: sample_job.json
ui/: ui_theme.py
workflows/: marathon.md  scan-funding-news.md  scan.md  score.md
(+180 files in other folders)
