[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matchbox"
version = "0.3.0"
description = "Local desktop app: scan ATS boards, score by fit, assemble tailored CVs from a tagged library. Claude Code is the reasoning engine; the app holds no LLM client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["jobs", "ats", "cv", "tailor", "claude-code", "htmx", "fastapi", "typst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "jsonschema>=4.22",
    "watchfiles>=0.22",
    "fastembed>=0.3",
    "rank-bm25>=0.2.2",
    "pypdf>=4.2",
]

[project.urls]
Homepage = "https://github.com/5h1vmani/matchbox"
Documentation = "https://github.com/5h1vmani/matchbox/tree/main/docs"
Repository = "https://github.com/5h1vmani/matchbox"
Changelog = "https://github.com/5h1vmani/matchbox/blob/main/CHANGELOG.md"
Issues = "https://github.com/5h1vmani/matchbox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",  # also used by FastAPI TestClient
    "types-jsonschema>=4.22",
]

[project.scripts]
matchbox = "matchbox.cli:app"
matchbox-web = "matchbox.web.app:run"
matchbox-jobreqs = "matchbox.jobreqs:main"
matchbox-assemble = "matchbox.assemble:main"
matchbox-ingest = "matchbox.onboarding.ingest_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/matchbox"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/matchbox"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.codespell]
# Skip these directories and patterns entirely.
skip = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".secrets.baseline",
    "docs/history",
    "archive",
    "node_modules",
    "*.lock",
    "people/*/matchbox.db",
    # Verbatim upstream — don't second-guess the Contributor Covenant's wording.
    "CODE_OF_CONDUCT.md",
]
# Allow these words even though codespell would flag them.
# - NEET/neet: Indian education/visa term (NEET-UG/PG, "NEET-eligible")
# - alot/thru: occasionally used intentionally in informal copy
# - master/strat/nam: false positives in tech contexts
# - nd: design-doc placeholder for "N days" (e.g. "applied 3d ago", "Nd overdue")
ignore-words-list = "alot,thru,master,strat,nam,neet,nd"
# Don't auto-fix; flag and let the human decide.
check-filenames = true
