[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matchbox"
version = "0.3.0"
description = "Local desktop app: scan ATS boards, score by fit, assemble tailored CVs from a tagged library. Claude Code is the reasoning engine; the app holds no LLM client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["jobs", "ats", "cv", "tailor", "claude-code", "htmx", "fastapi", "typst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.13.4",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.28.1",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.12",
    "jsonschema>=4.22",
    "watchfiles>=0.22",
    "fastembed>=0.8.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.2",
    # PDF rendering for tailored CVs / cover letters (render_html.py). Lazy-
    # imported, but a hard runtime dep — was previously undeclared, so a fresh
    # install (and CI) had no weasyprint and every render path/test broke.
    # Needs system Pango/Cairo at runtime (see the CI workflow's apt step).
    "weasyprint>=60",
]

[project.urls]
Homepage = "https://github.com/5h1vmani/matchbox"
Documentation = "https://github.com/5h1vmani/matchbox/tree/main/docs"
Repository = "https://github.com/5h1vmani/matchbox"
Changelog = "https://github.com/5h1vmani/matchbox/blob/main/CHANGELOG.md"
Issues = "https://github.com/5h1vmani/matchbox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "mypy>=2.1.0",
    # Pinned exactly: ruff's lint rules AND format output change between
    # versions. CI installs from here, so an unpinned floor let CI drift past
    # the pre-commit-pinned ruff and fail `ruff format --check`/`ruff check`.
    # Keep this in lockstep with .pre-commit-config.yaml's ruff-pre-commit rev.
    "ruff==0.15.16",
    "httpx>=0.28.1",  # also used by FastAPI TestClient
    "types-jsonschema>=4.22",
]

[project.scripts]
matchbox = "matchbox.cli:app"
matchbox-web = "matchbox.web.app:run"
matchbox-jobreqs = "matchbox.jobreqs:main"
matchbox-assemble = "matchbox.assemble:main"
matchbox-ingest = "matchbox.onboarding.ingest_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/matchbox"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/matchbox"]
plugins = ["pydantic.mypy"]

# weasyprint ships no type stubs in some environments and ships them in others.
# Declaring it untyped here is stable across both, so we need no per-line
# `# type: ignore[import-untyped]` (which strict mode flags as unused wherever
# weasyprint *does* resolve types).
[[tool.mypy.overrides]]
module = ["weasyprint"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.codespell]
# Skip these directories and patterns entirely.
skip = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".secrets.baseline",
    "docs/history",
    "archive",
    "node_modules",
    "*.lock",
    "people/*/matchbox.db",
    # Built React bundle (gitignored, regenerated by `npm run build`) — minified
    # JS is a false-positive minefield and never hand-edited.
    "src/matchbox/web/static/app",
    # Verbatim upstream — don't second-guess the Contributor Covenant's wording.
    "CODE_OF_CONDUCT.md",
]
# Allow these words even though codespell would flag them.
# - NEET/neet: Indian education/visa term (NEET-UG/PG, "NEET-eligible")
# - alot/thru: occasionally used intentionally in informal copy
# - master/strat/nam: false positives in tech contexts
# - nd: design-doc placeholder for "N days" (e.g. "applied 3d ago", "Nd overdue")
# - zar: ISO currency code (South African Rand) in the salary aggregator
# - lsat: the "Pinaka LSAT" design-system name in the CV template
ignore-words-list = "alot,thru,master,strat,nam,neet,nd,zar,lsat"
# Don't auto-fix; flag and let the human decide.
check-filenames = true
